# envicutor

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  structure.txt  todo.txt
.github/workflows/: test.yml
db/: Dockerfile  schema.sql
drafts/: limits.txt  packages_installing.txt  refactor-install-packages.txt
envicutor/: Cargo.toml  Dockerfile  db.sql  docker-entrypoint.sh  setup-cgroup.sh  setup-nix-and-db.sh
envicutor/src/: fs.rs  globals.rs  install_packages.rs  isolate.rs  lib.rs  limits.rs  main.rs  requests.rs  runtime_installation.rs  strings.rs  temp_box.rs  temp_dir.rs  transaction.rs  types.rs  units.rs
envicutor/src/api/: common_functions.rs  common_responses.rs  deletion.rs  execution.rs  installation.rs  listing.rs  mod.rs
test/: Dockerfile  check-residual.sh  common.js  complex.js  concurrency.js  docker-entrypoint.sh  installation.js  shell.nix  simple.js  stress.js  test.js
worker/child-container-init/: Cargo.toml  Dockerfile  docker-compose.yaml  notes.txt  pseudocode.txt  shell.nix  todo.txt
worker/child-container-init/kubernetes-experiments/: Dockerfile  cache-server-service.yaml  cache-server.yaml  pseudo.txt  worker-slave.yaml
worker/child-container-init/src/: main.rs
worker/child-container-init/test/: cutor-run.sh  shell.nix
worker/init/: pseudocode.txt
