[package]
name = "envicutor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", default-features = false, features = ["rt-multi-thread", "macros", "process", "time", "io-util", "fs", "sync"] }
axum = "0.7.5"
rusqlite = "0.31.0"
anyhow = "1.0.86"
