[package]
name = "child-container-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", default-features = false, features = ["rt-multi-thread", "macros", "process", "time"] }
