[package]
name = "child-container-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
tokio = { version = "1.36.0", default-features = false, features = ["rt-multi-thread", "macros", "process", "time", "fs", "io-util"] }
